Fix top navbar acting weird on smaller screens / resizes
* Change login to display inline until it encounters the nav links, then it's on the next line until the links collapse, then it's inline again

--- a/app/assets/stylesheets/bootstrap-responsive.css
+++ b/app/assets/stylesheets/bootstrap-responsive.css
@@ -908,7 +908,7 @@
   }
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 768px) {
   body {
     padding-top: 0;
   }
